--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Hellomarkdownblog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "views/articles/index.ejs",
   "scripts": {
     "devStart": "nodemon server.js"
   },
