--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "marked": "^4.0.17",
+    "method-override": "^3.0.0",
     "mongoose": "^6.3.6",
     "slugify": "^1.6.5"
   },
