--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "jsdom": "^19.0.0",
     "marked": "^4.0.17",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.6",
